[workspace]

members = [
    "contracts/*",
    "packages/*"
]

[package]
name = "noi-cli"
version = "0.1.0"
description = "CLI tool for provide useful commands about noi"
authors = ["frostornge <frostornge@gmail.com>"]
edition = "2018"

[dependencies]
noi-core = { path = "./contracts/core" }
noi-oracle = { path = "./contracts/oracle" }
noi-treasury = { path = "./contracts/treasury" }

cosmwasm-schema = "1.0.0"
clap = { version = "3.2.19", features = ["derive"] }
