[package]
name = "noi-treasury"
version = "0.1.0"
authors = ["frostornge <frostornge@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.14.0"
cw-utils = "0.14.0"
cw2 = "0.14.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

osmo-bindings = { git="https://github.com/osmosis-labs/bindings", rev="9b9278f" }

noi-alias = { path = "../../packages/alias" }
noi-interface = { path = "../../packages/interface" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.14.0"
